--- a/trunk/AsfViewer/AsfViewer/AsfViewer.vcxproj.filters
+++ b/trunk/AsfViewer/AsfViewer/AsfViewer.vcxproj.filters
@@ -56,12 +56,18 @@
     <ClCompile Include="AsfLibraryWrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ReadWriteThread.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AsfLibraryWrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ReadWriteThread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
